# zulip-api-rust-client

./: Cargo.toml  LICENSE.md  README.md
src/: client.rs  lib.rs
src/api/: drafts.rs  messages.rs  mod.rs  streams.rs  users.rs
src/examples/: main.rs
src/models/: drafts.rs  message.rs  mod.rs  users.rs
