[package]
name = "zulip-api-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.10", features = ["json"]}
serde = "1.0.136"
serde_json = "1.0.79"
tokio = {version = "1", features = ["full"]}

[lib]
name = "zulip_api_rust_client"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/examples/main.rs"
